samples/_failures_safe/1761154290_aa0d89_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aed26695.c: In function ‘main’:
./samples/SAFE/__tmp_aed26695.c:156:24: error: missing terminating " character
  156 |                 printf("Invalid operation\n
      |                        ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_aed26695.c:156:17: error: expected expression at end of input
  156 |                 printf("Invalid operation\n
      |                 ^~~~~~
./samples/SAFE/__tmp_aed26695.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aed26695.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_aed26695.c:156:17: error: expected declaration or statement at end of input
